[package]
name = "reward_vault_sol"
version = "0.1.0"
description = "Reward Vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reward_vault_sol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version="0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
hex = "0.4.3"
solana-program = "2.0.4"
